<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="150dp" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/kamarnama"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text=""
                android:textAppearance="?android:attr/textAppearanceLarge" />

            <TableRow
                android:id="@+id/tableRow1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" >

                <TextView
                    android:id="@+id/textView2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/isi" />

                <TextView
                    android:id="@+id/kamarisi"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="" />

                <TextView
                    android:id="@+id/textView4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="3dip"
                    android:text="@string/orang" />

            </TableRow>

            <TableRow
                android:id="@+id/tableRow3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" >

                <TextView
                    android:id="@+id/textView1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/ukuran" />

                <TextView
                    android:id="@+id/kamarukuranpanjang"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="2dip"
                    android:text="" />

                <TextView
                    android:id="@+id/textView8"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="2dip"
                    android:text="@string/x" />

                <TextView
                    android:id="@+id/kamarukuranlebar"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="2dip"
                    android:text="" />

                <TextView
                    android:id="@+id/kamarukuranjenis"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="2dip"
                    android:text="" />
            </TableRow>

            <TableRow
                android:id="@+id/tableRow2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" >

                <TableRow
                    android:id="@+id/tableRow7"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_column="0" >

                    <TextView
                        android:id="@+id/textView5"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="left"
                        android:padding="3dip"
                        android:text="@string/harga" />

                    <TextView
                        android:id="@+id/kamarharga"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="left"
                        android:padding="3dip"
                        android:text="" />

                    <TableRow
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="right" >

                        <TextView
                            android:id="@+id/textView3"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/bukakurung" />

                        <TextView
                            android:id="@+id/kamarminkontrak"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:padding="3dip"
                            android:text="" />

                        <TextView
                            android:id="@+id/textView6"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:padding="3dip"
                            android:text="@string/per" />

                        <TextView
                            android:id="@+id/kamarminkontrakjenis"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:padding="3dip"
                            android:text="" />

                        <TextView
                            android:id="@+id/textView12"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/tutupkurung" />
                    </TableRow>
                </TableRow>
            </TableRow>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dip"
                android:background="#cccccc" />

            <Button
                android:id="@+id/btn_lihat_foto"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/lihatfoto" />

        </LinearLayout>
    </ScrollView>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dip"
        android:background="#cccccc" />

    <TableRow
        android:id="@+id/tableRow8"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center" >

        <TextView
            android:id="@+id/kamar"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/fasilitasint" />
    </TableRow>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dip"
        android:background="#cccccc" />

    <ListView
        android:id="@+id/android:list"
        android:layout_width="match_parent"
        android:clickable="false"
        android:layout_height="wrap_content" >
    </ListView>

    <TextView
        android:id="@+id/android:empty"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/notfound"
        android:text="@string/space"
        android:textAppearance="?android:attr/textAppearanceLarge" />

</LinearLayout>